@@ -1,5 +1,6 @@
-package fr.sncf.d2d.serversideapp.messaging.websocket.handlers;
+package fr.sncf.d2d.serversideapp.messaging.websocket.events;
 
+import java.util.Collections;
 import java.util.Map;
 
 import org.springframework.stereotype.Component;
@@ -10,12 +11,11 @@ import fr.sncf.d2d.serversideapp.messaging.channels.ChannelEventsHandlers;
 import fr.sncf.d2d.serversideapp.messaging.channels.handlers.MessageDeletionHandler;
 import fr.sncf.d2d.serversideapp.messaging.channels.handlers.MessageHandler;
 import fr.sncf.d2d.serversideapp.messaging.channels.handlers.StateHandler;
-import fr.sncf.d2d.serversideapp.messaging.websocket.MessagingWebSocketHandler;
 import lombok.RequiredArgsConstructor;
 
 @Component
 @RequiredArgsConstructor
-public class WebSocketChannelEventHandlersFactory {
+public class WebSocketChannelEventsHandlersFactory {
 
     private final HxRenderer hxRenderer;
 
@@ -32,14 +32,9 @@ public class WebSocketChannelEventHandlersFactory {
 
     private MessageHandler messageHandler(HxWebSocketView view){
         return (message, author) -> {
-            final var channelId = view.getSession()
-                .getAttributes()
-                .get(MessagingWebSocketHandler.CHANNEL_ID_ATTRIBUTE_NAME);
-
             view.render(
                 "channels/message", 
                 Map.of(
-                    "channelId", channelId,
                     "message", message,
                     "author", author
                 )
@@ -49,32 +44,18 @@ public class WebSocketChannelEventHandlersFactory {
 
     private StateHandler stateHandler(HxWebSocketView view){
         return state -> {
-            final var channelId = view.getSession()
-                .getAttributes()
-                .get(MessagingWebSocketHandler.CHANNEL_ID_ATTRIBUTE_NAME);
-
             view.render(
                 "channels/state", 
-                Map.of(
-                    "channelId", channelId,
-                    "state", state
-                )
+                Collections.singletonMap("state", state)
             );
         };
     }
 
     private MessageDeletionHandler deleteHandler(HxWebSocketView view) {
         return messageId -> {
-            final var channelId = view.getSession()
-            .getAttributes()
-            .get(MessagingWebSocketHandler.CHANNEL_ID_ATTRIBUTE_NAME);
-
             view.render(
                 "channels/delete-message", 
-                Map.of(
-                    "channelId", channelId,
-                    "messageId", messageId
-                )
+                Collections.singletonMap("messageId", messageId)
             );
         };
     }
